# simple_projects

./: README.md  main.py  pyproject.toml
